--- a/portfolio/CSA/app/index.html
+++ b/portfolio/CSA/app/index.html
@@ -138,27 +138,197 @@
         <div id="home_page">
             <div class="container">
                 <div class="content">
+                    <span class="arrow_left1">
+                        <span class="txt">CSA ФРАНШИЗА</span>
+                    </span>
+                    <span class="arrow_right1">
+                        <span class="txt">ПОДРОБНЕЕ О CSA</span>
+                    </span>
                     <div class="slider1">
-                        <div class="slide">
-                            <p>слайд1</p>
+                        <div class="slide slide1">
+                            <h1>Cyber Sport Arena</h1>
+                            <h2>CSA франшиза</h2>
+                            <p class="desc">При правильном подходе вложенные средства очень быстро окупаются и партнер, купивший франшизу, немедленно идет в гору. Система позволяет контролировать работу киберспортивной площадки без вашего непосредственного участия</p>
+                            <div class="block_container_first">
+                                <div class="block">
+                                    <h3>задача</h3>
+                                    <p>Контроль соответствия киберспортивной площадки уровню качества обслуживания бренда</p>
+                                </div>
+                                <div class="block">
+                                    <h3>преимущества</h3>
+                                    <p>Мониторинг осуществляется специалистами высокого уровня Отчет о текущей ситуации в любое время</p>
+                                </div>
+                                <div class="block">
+                                    <h3>уникальность</h3>
+                                    <p>Система не имеет аналогов на рынке услуг киберспортивных арен и площадок</p>
+                                </div>
+                            </div>
+                            <p class="contacts">наши контакты</p>
+                            <p class="adress">lokoncev@gmail.com / +7 (800) 550 72 42 / с 9 до 19 UTC +03:00</p>
+                            <div class="block_container_second">
+                                <div class="block">
+                                    <p class="number_block">1</p>
+                                    <p class="txt">Выбор помещения, дизайн и ремонт</p>
+                                </div>
+                                <div class="block">
+                                    <p class="number_block">2</p>
+                                    <p class="txt">Закупка игрового оборудования
+                                    </p>
+                                </div>
+                                <div class="block">
+                                    <p class="number_block">3</p>
+                                    <p class="txt">Подбор и обучение персонала
+                                    </p>
+                                </div>
+                                <div class="block">
+                                    <p class="number_block">4</p>
+                                    <p class="txt">Привличение клиентов
+                                    </p>
+                                </div>
+                                <div class="block">
+                                    <p class="number_block">5</p>
+                                    <p class="txt">Электронный учет всех показателей</p>
+                                </div>
+                            </div>
+                            <span class="line"></span>
+                            <h4>Как Мы Открываем</h4>
                         </div>
                         <div class="slide slide_logo">
                             <div class="img"></div>
                         </div>
-                        <div class="slide">
-                            <p>слайд3</p>
+                        <div class="slide slide2">
+                            <h1>Cyber Sport Arena</h1>
+                            <h2>философия csa</h2>
+                            <p class="desc">CSA – одна из крупнейших в Европе площадок
+                                <br> для проведения киберспортивных турниров. На двух этажах комплекса размещаются киберигровой-клуб, ресторан, флагманский магазин киберспортивных товаров CSA Store и компьютерный клуб «CSA Colizeum»</p>
+                            <div class="block_container">
+                                <div class="block">
+                                    <p class="top">300 м2</p>
+                                    <p class="bottom">общая площадь</p>
+                                </div>
+                                <div class="block">
+                                    <p class="top">30 мест</p>
+                                    <p class="bottom">игровая зона</p>
+                                </div>
+                                <div class="block">
+                                    <p class="top">45 человек</p>
+                                    <p class="bottom">вместимость</p>
+                                </div>
+                            </div>
+                            <span class="line"></span>
+                            <h4>Почему CSA</h4>
                         </div>
-                        <div class="slide">
-                            <p>слайд4</p>
+                        <div class="slide slide3">
+                            <h1>Cyber Sport Arena</h1>
+                            <h2>философия csa</h2>
+                            <div class="block_container">
+                                <div class="block">
+                                    <img src="img/icon1.png" alt="logo">
+                                    <p>Dota 2</p>
+                                </div>
+                                <div class="block">
+                                    <img src="img/icon2.png" alt="logo">
+                                    <p>CS:GO</p>
+                                </div>
+                                <div class="block">
+                                    <img src="img/icon_3.png" alt="logo">
+                                    <p>League</p>
+                                </div>
+                                <div class="block">
+                                    <img src="img/icon4.png" alt="logo">
+                                    <p>Quake</p>
+                                </div>
+                                <div class="block">
+                                    <img src="img/icon5.png" alt="logo">
+                                    <p>Hearthstone</p>
+                                </div>
+                            </div>
+                            <p class="desc">
+                                Посетители CSA Colizeum смогут увидеть
+                                <br> презентации новых игр, стать зрителями крупнейших
+                                <br> турниров или принять в них участие.
+                            </p>
+                            <span class="line"></span>
+                            <h4>Большой Выбор<br>
+Киберспортивных Игр</h4>
                         </div>
-                        <div class="slide">
-                            <p>слайд5</p>
+                        <div class="slide slide4">
+                            <h1>Cyber Sport Arena</h1>
+                            <h2>философия csa</h2>
+                            <div class="container_block">
+                                <div class="block_left">
+                                    <p class="title">Процессор</p>
+                                    <p class="txt">Intel Core i3
+                                        <br> 6-го поколения</p>
+                                    <p class="title">Оперативная память</p>
+                                    <p class="txt">Kingston HyperX 6Гб</p>
+                                    <p class="title">Жесткий диск</p>
+                                    <p class="txt">HDD со скоростью
+                                        <br> вращения от 7000 об/мин</p>
+                                </div>
+                                <div class="block_center">
+                                    <img src="img/computer.svg" alt="pc">
+                                </div>
+                                <div class="block_right">
+                                    <p class="title">Видеокарта</p>
+                                    <p class="txt">AMD Radeon R7,
+                                        <br> объем памяти 2Гб</p>
+                                    <p class="title">Игровая клавиатура</p>
+                                    <p class="txt">Logitech Wireless Touch
+                                        <br> Keyboard K400</p>
+                                    <p class="title">
+                                        Игровая мышка</p>
+                                    <p class="txt">Logitech G402 Hyperion Fury</p>
+                                </div>
+                            </div>
+                            <span class="line"></span>
+                            <h4>Профессиональное<br>
+Игровое Оборудование</h4>
                         </div>
-                        <div class="slide">
-                            <p>слайд6</p>
+                        <div class="slide slide5">
+                            <h1>Cyber Sport Arena</h1>
+                            <h2>философия csa</h2>
+                            <div class="block_container">
+                                <div class="block">
+                                    <img src="img/p1.svg" alt="partners">
+                                </div>
+                                <div class="block">
+                                    <img src="img/p2.svg" alt="partners">
+                                </div>
+                                <div class="block">
+                                    <img src="img/p3.png" alt="partners">
+                                </div>
+                            </div>
+                            <p class="desc">Посетители CSA Colizeum смогут увидеть
+                                <br> презентации новых игр, стать зрителями крупнейших
+                                <br> турниров или принять в них участие.</p>
+                            <span class="line"></span>
+                            <h4>Наши Партнеры</h4>
                         </div>
-                        <div class="slide">
-                            <p>слайд7</p>
+                        <div class="slide slide6">
+                            <h1>Cyber Sport Arena</h1>
+                            <h2>философия csa</h2>
+                            <p class="desc">
+                                На первом этаже CSA Colizeum находится круглосуточный компьютерный на
+                                <br> 30 посадочных мест. Клуб оснащён мощными профессиональными компьютерами
+                                <br>на базе процессоров Intel i7-6700k и видеокарт Nvidia GeForce GTX 1060 3 GB
+                            </p>
+                            <div class="block_container">
+                                <div class="block">
+                                    <p class="title">50 руб/час</p>
+                                    <p class="txt">Будни с 9:00 до 15:00, а также в выходные и праздничные дни с 9:00 до 13:00</p>
+                                </div>
+                                <div class="block">
+                                    <p class="title">80 руб/час</p>
+                                    <p class="txt">Будни с 15:00 до 23:00, а также в выходные и праздничные дни с 13:00 до 23:00</p>
+                                </div>
+                                <div class="block">
+                                    <p class="title">400 руб</p>
+                                    <p class="txt">За всю ночь в будни и 500 рублей накануне выходных Ночное время с 23:00 до 8:00</p>
+                                </div>
+                            </div>
+                            <span class="line"></span>
+                            <h4>Прайс-Лист</h4>
                         </div>
                     </div>
                 </div>
