--- a/portfolio/CSA/app/index.html
+++ b/portfolio/CSA/app/index.html
@@ -124,8 +124,8 @@
         </div>
         <!--Страницы------------------------------------------------------------------>
         <div id="start_page">
-            <div class="container">
-                <div class="block_logo">
+                <div class="content">
+                    <div class="block_logo">
                     <div class="logo_content">
                         <div class="logo_txt">
                         </div>
@@ -133,7 +133,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
+                </div>
         </div>
         <div id="home_page">
             <div class="container">
