--- a/portfolio/Barbershop/app/index.html
+++ b/portfolio/Barbershop/app/index.html
@@ -14,7 +14,6 @@
     <link rel="stylesheet" href="css/invest.css?ver=123">
     <link rel="stylesheet" href="css/dop.css?ver=123">
     <link rel="stylesheet" href="css/projects.css?ver=123">
-    <link rel="stylesheet" href="css/animate.css">
 </head>
 
 <body>
@@ -80,7 +79,7 @@
         </div>
         <!--Содержимое страницы-->
         <div class="content_site">
-            <div id="home" class="tab_page slideInLeft">
+            <div id="home" class="tab_page">
                 <div class="container">
                     <div class="tab_content">
                         <div class="home_page">
@@ -159,7 +158,7 @@
                     </div>
                 </div>
             </div>
-            <div id="invest" class="tab_page zoomIn">
+            <div id="invest" class="tab_page">
                 <div class="container">
                     <div class="invest_page">
                         <div class="bg">
@@ -211,7 +210,7 @@
                     </div>
                 </div>
             </div>
-            <div id="dop" class="tab_page slideInRight">
+            <div id="dop" class="tab_page">
                 <div class="container">
                     <div class="dop_page">
                         <div class="bg">
@@ -293,7 +292,7 @@
                     </div>
                 </div>
             </div>
-            <div id="projects" class="tab_page slideInDown">
+            <div id="projects" class="tab_page">
                 <div class="container">
                     <div class="home_page_projects">
                         <div class="bg">
@@ -570,7 +569,7 @@
                     </div>
                 </div>
             </div>
-            <div id="contacts_tab" class="tab_page zoomIn">
+            <div id="contacts_tab" class="tab_page">
                 <div class="bg_portret"></div>
                 <div class="container">
                     <p class="top">уточнить детали</p>
