--- a/portfolio/CSA/app/index.html
+++ b/portfolio/CSA/app/index.html
@@ -11,21 +11,22 @@
     <link rel="stylesheet" href="css/common.css">
     <link rel="stylesheet" href="css/start.css">
     <link rel="stylesheet" href="css/home.css">
+    <link rel="stylesheet" href="css/last.css">
 </head>
 
 <body>
     <div id="wrapper">
         <div id="mobile_nav">
             <ul>
-                <li class="link_trigger"><a href="#">НОВОСТИ</a>
+                <li class="link_trigger link1"><a href="#">НОВОСТИ</a>
                 </li>
-                <li class="link_trigger"><a href="#">МЕРОПРИЯТИЯ</a>
+                <li class="link_trigger link2"><a href="#">МЕРОПРИЯТИЯ</a>
                 </li>
-                <li class="link_trigger"><a href="#">СТАТИСТИКА</a>
+                <li class="link_trigger link3"><a href="#">СТАТИСТИКА</a>
                 </li>
-                <li class="link_trigger"><a href="#">ГАЛЕРЕЯ</a>
+                <li class="link_trigger link4"><a href="#">ГАЛЕРЕЯ</a>
                 </li>
-                <li class="link_trigger"><a href="#">УСЛУГИ</a>
+                <li class="link_trigger link5"><a href="#">УСЛУГИ</a>
                 </li>
                 <div class="icons_block">
                     <div class="link1 link_trigger">
@@ -102,19 +103,19 @@
                     </div>
                     <div class="right_section">
                         <ul>
-                            <li class="link_trigger"><a href="#">НОВОСТИ</a>
+                            <li class="link_trigger link1"><a href="#">НОВОСТИ</a>
                                 <div class="bg"></div>
                             </li>
-                            <li class="link_trigger"><a href="#">МЕРОПРИЯТИЯ</a>
+                            <li class="link_trigger link2"><a href="#">МЕРОПРИЯТИЯ</a>
                                 <div class="bg"></div>
                             </li>
-                            <li class="link_trigger"><a href="#">СТАТИСТИКА</a>
+                            <li class="link_trigger link3"><a href="#">СТАТИСТИКА</a>
                                 <div class="bg"></div>
                             </li>
-                            <li class="link_trigger"><a href="#">ГАЛЕРЕЯ</a>
+                            <li class="link_trigger link4"><a href="#">ГАЛЕРЕЯ</a>
                                 <div class="bg"></div>
                             </li>
-                            <li class="link_trigger"><a href="#">УСЛУГИ</a>
+                            <li class="link_trigger link5"><a href="#">УСЛУГИ</a>
                                 <div class="bg"></div>
                             </li>
                         </ul>
@@ -124,8 +125,8 @@
         </div>
         <!--Страницы------------------------------------------------------------------>
         <div id="start_page">
-                <div class="content">
-                    <div class="block_logo">
+            <div class="content">
+                <div class="block_logo">
                     <div class="logo_content">
                         <div class="logo_txt">
                         </div>
@@ -133,7 +134,7 @@
                         </div>
                     </div>
                 </div>
-                </div>
+            </div>
         </div>
         <div id="home_page">
             <div class="container">
@@ -332,6 +333,51 @@
                         </div>
                     </div>
                 </div>
+            </div>
+        </div>
+        <div id="last_page">
+            <div class="active_bg"></div>
+            <div class="container">
+                <div class="slider_content">
+                    <div class="slider2">
+                        <div class="slide slide1">
+                            <span class="arrow_left_slide1"></span>
+                            <span class="arrow_right_slide1"></span>
+                            <p>новости</p>
+                        </div>
+                        <div class="slide">
+                            <p>новости2</p>
+                        </div>
+                        <div class="slide">
+                            <p>мероприятия</p>
+                        </div>
+                        <div class="slide">
+                            <p>статистика</p>
+                        </div>
+                        <div class="slide">
+                            <p>галерея</p>
+                        </div>
+                        <div class="slide">
+                            <p>услуги</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="custom_dots">
+                <ul>
+                    <li class="dot dot1 active_dot"><span></span></li>
+                    <li class="dot dot2"><span></span></li>
+                    <li class="dot dot3"><span></span></li>
+                    <li class="dot dot4"><span></span></li>
+                    <li class="dot dot5"><span></span></li>
+                    <li class="dot dot6"><span></span></li>
+                    <span class="span_left">
+                    /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+                </span>
+                <span class="span_right">
+                    /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+                </span>
+                </ul>
             </div>
         </div>
     </div>
