--- a/portfolio/CSA/app/index.html
+++ b/portfolio/CSA/app/index.html
@@ -7,11 +7,11 @@
     <meta name="description" content="">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <link rel="stylesheet" href="css/libs.css">
-    <link rel="stylesheet" href="css/common.css">
-    <link rel="stylesheet" href="css/start.css">
-    <link rel="stylesheet" href="css/home.css">
-    <link rel="stylesheet" href="css/last.css">
+    <link rel="stylesheet" href="css/libs.css?ver=123">
+    <link rel="stylesheet" href="css/common.css?ver=123">
+    <link rel="stylesheet" href="css/start.css?ver=123">
+    <link rel="stylesheet" href="css/home.css?ver=123">
+    <link rel="stylesheet" href="css/last.css?ver=123">
 </head>
 
 <body>
@@ -384,7 +384,7 @@
     <!--Sripts-->
     <script src="libs/jquery/dist/jquery.min.js"></script>
     <script src="libs/slick-1.8.1/slick/slick.min.js"></script>
-    <script src="js/common.js"></script>
+    <script src="js/common.js?ver=123"></script>
 </body>
 
 </html>
