--- a/portfolio/CSA/app/index.html
+++ b/portfolio/CSA/app/index.html
@@ -457,7 +457,52 @@
                         <!--(СТАТИСТИКА)Четвертая страница Основного блока-->
                         <div class="slide slide4">
                             <div class="content">
-                                <div class="left_block"></div>
+                                <div class="left_block">
+                                    <div class="block_team">
+                                        <div class="img"><img src="img/team_photo.jpg" alt=""></div>
+                                        <div class="logo">
+                                            <img src="img/logo_team.png" alt="">
+                                        </div>
+                                        <div class="bottom_container">
+                                            <div class="left_sect">
+                                                <p class="title">Дата проведения:</p>
+                                                <p class="desc">27.11.2018</p>
+                                                <img src="img/game.png" alt="">
+                                            </div>
+                                            <div class="center_sect">
+                                                <h5>CSA TEAM</h5>
+                                                <p>VP, ASUS.Polar</p>
+                                            </div>
+                                            <div class="right_sect">
+                                                <p class="title">Сумма призовых:</p>
+                                                <p class="desc">$ 575.000</p>
+                                                <img src="img/flag.png" alt="">
+                                            </div>
+                                        </div>
+                                    </div>  
+                                    <div class="block_team">
+                                        <div class="img"><img src="img/team_photo.jpg" alt=""></div>
+                                        <div class="logo">
+                                            <img src="img/logo_team.png" alt="">
+                                        </div>
+                                        <div class="bottom_container">
+                                            <div class="left_sect">
+                                                <p class="title">Дата проведения:</p>
+                                                <p class="desc">27.11.2018</p>
+                                                <img src="img/game.png" alt="">
+                                            </div>
+                                            <div class="center_sect">
+                                                <h5>CSA TEAM</h5>
+                                                <p>VP, ASUS.Polar</p>
+                                            </div>
+                                            <div class="right_sect">
+                                                <p class="title">Сумма призовых:</p>
+                                                <p class="desc">$ 575.000</p>
+                                                <img src="img/flag.png" alt="">
+                                            </div>
+                                        </div>
+                                    </div> 
+                                </div>
                                 <div class="center_block">
                                     <h5>Статистика<br>Команд и Игроков</h5>
                                     <p class="date">Обновлено: 16.05 / 18.05.2017</p>
@@ -693,7 +738,52 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="right_block"></div>
+                                <div class="right_block">
+                                    <div class="block_team">
+                                        <div class="img"><img src="img/team_photo.jpg" alt=""></div>
+                                        <div class="logo">
+                                            <img src="img/logo_team.png" alt="">
+                                        </div>
+                                        <div class="bottom_container">
+                                            <div class="left_sect">
+                                                <p class="title">Дата проведения:</p>
+                                                <p class="desc">27.11.2018</p>
+                                                <img src="img/game.png" alt="">
+                                            </div>
+                                            <div class="center_sect">
+                                                <h5>CSA TEAM</h5>
+                                                <p>VP, ASUS.Polar</p>
+                                            </div>
+                                            <div class="right_sect">
+                                                <p class="title">Сумма призовых:</p>
+                                                <p class="desc">$ 575.000</p>
+                                                <img src="img/flag.png" alt="">
+                                            </div>
+                                        </div>
+                                    </div>  
+                                    <div class="block_team">
+                                        <div class="img"><img src="img/team_photo.jpg" alt=""></div>
+                                        <div class="logo">
+                                            <img src="img/logo_team.png" alt="">
+                                        </div>
+                                        <div class="bottom_container">
+                                            <div class="left_sect">
+                                                <p class="title">Дата проведения:</p>
+                                                <p class="desc">27.11.2018</p>
+                                                <img src="img/game.png" alt="">
+                                            </div>
+                                            <div class="center_sect">
+                                                <h5>CSA TEAM</h5>
+                                                <p>VP, ASUS.Polar</p>
+                                            </div>
+                                            <div class="right_sect">
+                                                <p class="title">Сумма призовых:</p>
+                                                <p class="desc">$ 575.000</p>
+                                                <img src="img/flag.png" alt="">
+                                            </div>
+                                        </div>
+                                    </div> 
+                                </div>
                             </div>
                         </div>
                         <!--Пятая страница Основного блока-->
