--- a/portfolio/Veliki/app/index.html
+++ b/portfolio/Veliki/app/index.html
@@ -56,6 +56,7 @@
             </div>
         </div>
         <div id="home">
+            <div class="overlay"></div>
             <div class="container">
                 <div class="content">
                     <div class="socials">
@@ -92,17 +93,17 @@
                         <div class="block">
                             <div class="icon"><i class="fas fa-map-marked-alt"></i></div>
                             <p>Москва, Зеленоград, Бульварная зона
-                                <br> 16 мкр.</p>
+                                 16 мкр.</p>
                         </div>
                         <div class="block">
                             <div class="icon"><i class="fas fa-map-marked-alt"></i></div>
                             <p>Беларусь, Гродно, Индурское шоссе, 14,
-                                <br> рядом с бассейном СШ N34</p>
+                                 рядом с бассейном СШ N34</p>
                         </div>
                         <div class="block">
                             <div class="icon"><i class="fas fa-map-marked-alt"></i></div>
                             <p>МО Химки ул. Лавочкина д.7
-                                <br> АВТОГОРОДОК</p>
+                                 АВТОГОРОДОК</p>
                         </div>
                     </div>
                 </div>
@@ -120,7 +121,7 @@
             <div class="container">
                 <h6>Наш парк</h6>
                 <div class="content row">
-                    <div class="block col-6">
+                    <div class="block col-xl-6 col-lg-6 col-md-6 col-sm-12">
                         <div class="block_content">
                             <a href="img/giroskuter.png" class="popup_img"><img src="img/giroskuter.png" alt="giroskuter"></a>
                             <p class="description">Гироскутер. Вес катающегося от 20 до 100 кг. 2 минуты бесплатного обучения – мы дарим к основному катанию. Чтобы начать - нужно лишь встать на него.</p>
@@ -128,7 +129,7 @@
                             <a class="btn" href="#popup">Запросить стоимость покупки</a>
                         </div>
                     </div>
-                    <div class="block col-6">
+                    <div class="block col-xl-6 col-lg-6 col-md-6 col-sm-12">
                         <div class="block_content">
                             <a href="img/velomobil02.jpg" class="popup_img"><img src="img/velomobil02.jpg" alt="velomobil02"></a>
                             <p class="description">Веломобиль BERG (Голландия), модель для активных мальчиков и девочек 3-8 лет. Передний и задний ход, торможение с помощью педалей.</p>
@@ -136,7 +137,7 @@
                             <a class="btn" href="#popup">Запросить стоимость покупки</a>
                         </div>
                     </div>
-                    <div class="block col-6">
+                    <div class="block col-xl-6 col-lg-6 col-md-6 col-sm-12">
                         <div class="block_content">
                             <a href="img/velomobil11.jpg" class="popup_img"><img src="img/velomobil11.jpg" alt="velomobil02"></a>
                             <p class="description">DINO CARS (Германия), для детей с 4 до 12 лет. Усовершенствованная конструкция. Надёжное рулевое управление, передний и задний ход, широкие спортивные шины.</p>
@@ -144,7 +145,7 @@
                             <a class="btn" href="#popup">Запросить стоимость покупки</a>
                         </div>
                     </div>
-                    <div class="block col-6">
+                    <div class="block col-xl-6 col-lg-6 col-md-6 col-sm-12">
                         <div class="block_content">
                             <a href="img/velomobil10.jpg" class="popup_img"><img src="img/velomobil10.jpg" alt="velomobil02"></a>
                             <p class="description">DINO CARS (Германия). Для людей с 5 до 99 лет. Переднее колесо веломобиля позволяет свободно маневрировать и проходить самые крутые повороты. Преимущества веломобиля: внедорожные шины, регулируемое сиденье, передний и задний ход.</p>
@@ -152,7 +153,7 @@
                             <a class="btn" href="#popup">Запросить стоимость покупки</a>
                         </div>
                     </div>
-                    <div class="block col-6">
+                    <div class="block col-xl-6 col-lg-6 col-md-6 col-sm-12">
                         <div class="block_content">
                             <a href="img/velomobil09.jpg" class="popup_img"><img src="img/velomobil09.jpg" alt="velomobil02"></a>
                             <p class="description">DINO CARS (Германия) Для людей с 2 до 99 лет. Веломобиль имеет 2 посадочных места. Регулируемые сиденья, передний и задний ход.</p>
@@ -160,7 +161,7 @@
                             <a class="btn" href="#popup">Запросить стоимость покупки</a>
                         </div>
                     </div>
-                    <div class="block col-6">
+                    <div class="block col-xl-6 col-lg-6 col-md-6 col-sm-12">
                         <div class="block_content">
                             <a href="img/velomobil08.jpg" class="popup_img"><img src="img/velomobil08.jpg" alt="velomobil02"></a>
                             <p class="description">DINO CARS (Германия). Для людей с 2 до 99 лет. Велоомобиль имеет четыре посадочных места. Катайтесь всей семьей!</p>
@@ -200,22 +201,22 @@
         	<div class="container">
         		<h6>Зеленоград</h6>
         		<div class="content row">
-        			  <a href="img/velomobil08.jpg" class="col-4 popup_img">
+        			  <a href="img/velomobil08.jpg" class="col-lg-4 col-md-6 col-sm-6 col-6 popup_img">
         			  	<img src="img/velomobil08.jpg" alt="velomobil02">
         			  </a>
-        			  <a href="img/velomobil08.jpg" class="col-4 popup_img">
+        			  <a href="img/velomobil08.jpg" class="col-lg-4 col-md-6 col-sm-6 col-6 popup_img">
         			  	<img src="img/velomobil08.jpg" alt="velomobil02">
         			  </a>
-        			  <a href="img/velomobil08.jpg" class="col-4 popup_img">
+        			  <a href="img/velomobil08.jpg" class="col-lg-4 col-md-6 col-sm-6 col-6 popup_img">
         			  	<img src="img/velomobil08.jpg" alt="velomobil02">
         			  </a>
-        			  <a href="img/velomobil08.jpg" class="col-4 popup_img">
+        			  <a href="img/velomobil08.jpg" class="col-lg-4 col-md-6 col-sm-6 col-6 popup_img">
         			  	<img src="img/velomobil08.jpg" alt="velomobil02">
         			  </a>
-        			  <a href="img/velomobil08.jpg" class="col-4 popup_img">
+        			  <a href="img/velomobil08.jpg" class="col-lg-4 col-md-6 col-sm-6 col-6 popup_img">
         			  	<img src="img/velomobil08.jpg" alt="velomobil02">
         			  </a>
-        			  <a href="img/velomobil08.jpg" class="col-4 popup_img">
+        			  <a href="img/velomobil08.jpg" class="col-lg-4 col-md-6 col-sm-6 col-6 popup_img">
         			  	<img src="img/velomobil08.jpg" alt="velomobil02">
         			  </a>
         		</div>
@@ -227,20 +228,20 @@
         		<div class="container row">
         			<div class="map col-12">
         				<p>Москва, г. Зеленоград, Бульварная зона 16 мкр.</p>
-        				<div class="map">
-        					<script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3AOY84GNoNCCKTcYlIkuMgkGKVLNTniiog&amp;width=100%25&amp;height=380&amp;lang=ru_RU&amp;scroll=true"></script>
+        				<div class="map_content">
+        					<script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3AOY84GNoNCCKTcYlIkuMgkGKVLNTniiog&amp;width=100%25&amp;height=100%&amp;lang=ru_RU&amp;scroll=true"></script>
         				</div>
         			</div>
         			<div class="map col-12">
         				<p>Беларусь, г. Гродно, Индурское шоссе, 14, пешеходная зона рядом с Бассейном СШ №34</p>
-        				<div class="map">
-        					<script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Af673f905b8da7007625e9acca019e0e61d33b7161b016a1b9141715f64e4f501&amp;width=100%25&amp;height=380&amp;lang=ru_RU&amp;scroll=true"></script>
+        				<div class="map_content">
+        					<script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Af673f905b8da7007625e9acca019e0e61d33b7161b016a1b9141715f64e4f501&amp;width=100%25&amp;height=100%&amp;lang=ru_RU&amp;scroll=true"></script>
         				</div>
         			</div>
         			<div class="map col-12">
         				<p>Московская область г. Химки ул. Лавочкина д. 7</p>
-        				<div class="map">
-        					<script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Aae96d4ad1cdafe684a706499aafb2fdff4e08e3757405b73da48ae17f90ef34c&amp;width=100%25&amp;height=380&amp;lang=ru_RU&amp;scroll=true"></script>
+        				<div class="map_content">
+        					<script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Aae96d4ad1cdafe684a706499aafb2fdff4e08e3757405b73da48ae17f90ef34c&amp;width=100%25&amp;height=100%&amp;lang=ru_RU&amp;scroll=true"></script>
         				</div>
         			</div>
         		</div>
