--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             </div>
         </div>
         <style>
-        #cube-loader{-webkit-box-align:center;-webkit-align-items:center;-ms-flex-align:center;align-items:center;display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;height:100%;width:100vw;position:fixed;z-index:1001;background:#4c4c4c;opacity:1;visibility:visible;-webkit-transition:.6s ease;-o-transition:.6s ease;transition:.6s ease}#cube-loader .caption{margin:0 auto}#cube-loader .cube-loader{width:73px;height:73px;margin:0 auto;position:relative;-webkit-transform:rotateZ(45deg);-ms-transform:rotate(45deg);transform:rotateZ(45deg)}#cube-loader .cube-loader .cube{position:relative;-webkit-transform:rotateZ(45deg);-ms-transform:rotate(45deg);transform:rotateZ(45deg);width:50%;height:50%;float:left;-webkit-transform:scale(1.1);-ms-transform:scale(1.1);transform:scale(1.1)}#cube-loader .cube-loader .cube:before{content:"";position:absolute;top:0;left:0;width:100%;height:100%;background-color:#fff;-webkit-animation:cube-loader 2.76s infinite linear both;animation:cube-loader 2.76s infinite linear both;-webkit-transform-origin:100% 100%;-ms-transform-origin:100% 100%;transform-origin:100% 100%}#cube-loader .cube-loader .loader-2{-webkit-transform:scale(1.1) rotateZ(90deg);-ms-transform:scale(1.1) rotate(90deg);transform:scale(1.1) rotateZ(90deg)}#cube-loader .cube-loader .loader-3{-webkit-transform:scale(1.1) rotateZ(180deg);-ms-transform:scale(1.1) rotate(180deg);transform:scale(1.1) rotateZ(180deg)}#cube-loader .cube-loader .loader-4{-webkit-transform:scale(1.1) rotateZ(270deg);-ms-transform:scale(1.1) rotate(270deg);transform:scale(1.1) rotateZ(270deg)}#cube-loader .cube-loader .loader-2:before{-webkit-animation-delay:.35s;animation-delay:.35s}#cube-loader .cube-loader .loader-3:before{-webkit-animation-delay:.69s;animation-delay:.69s}#cube-loader .cube-loader .loader-4:before{-webkit-animation-delay:1.04s;animation-delay:1.04s}.done{opacity:0!important;visibility:hidden!important}@-webkit-keyframes cube-loader{0%,10%{-webkit-transform:perspective(136px) rotateX(-180deg);transform:perspective(136px) rotateX(-180deg);opacity:0}25%,75%{-webkit-transform:perspective(136px) rotateX(0);transform:perspective(136px) rotateX(0);opacity:1}100%,90%{-webkit-transform:perspective(136px) rotateY(180deg);transform:perspective(136px) rotateY(180deg);opacity:0}}@keyframes cube-loader{0%,10%{-webkit-transform:perspective(136px) rotateX(-180deg);transform:perspective(136px) rotateX(-180deg);opacity:0}25%,75%{-webkit-transform:perspective(136px) rotateX(0);transform:perspective(136px) rotateX(0);opacity:1}100%,90%{-webkit-transform:perspective(136px) rotateY(180deg);transform:perspective(136px) rotateY(180deg);opacity:0}}
+        #portfolio, #contacts{display:none;}body{margin:0;}#cube-loader{-webkit-box-align:center;-webkit-align-items:center;-ms-flex-align:center;align-items:center;display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;height:100%;width:100vw;position:fixed;z-index:1001;background:#4c4c4c;opacity:1;visibility:visible;-webkit-transition:.6s ease;-o-transition:.6s ease;transition:.6s ease}#cube-loader .caption{margin:0 auto}#cube-loader .cube-loader{width:73px;height:73px;margin:0 auto;position:relative;-webkit-transform:rotateZ(45deg);-ms-transform:rotate(45deg);transform:rotateZ(45deg)}#cube-loader .cube-loader .cube{position:relative;-webkit-transform:rotateZ(45deg);-ms-transform:rotate(45deg);transform:rotateZ(45deg);width:50%;height:50%;float:left;-webkit-transform:scale(1.1);-ms-transform:scale(1.1);transform:scale(1.1)}#cube-loader .cube-loader .cube:before{content:"";position:absolute;top:0;left:0;width:100%;height:100%;background-color:#fff;-webkit-animation:cube-loader 2.76s infinite linear both;animation:cube-loader 2.76s infinite linear both;-webkit-transform-origin:100% 100%;-ms-transform-origin:100% 100%;transform-origin:100% 100%}#cube-loader .cube-loader .loader-2{-webkit-transform:scale(1.1) rotateZ(90deg);-ms-transform:scale(1.1) rotate(90deg);transform:scale(1.1) rotateZ(90deg)}#cube-loader .cube-loader .loader-3{-webkit-transform:scale(1.1) rotateZ(180deg);-ms-transform:scale(1.1) rotate(180deg);transform:scale(1.1) rotateZ(180deg)}#cube-loader .cube-loader .loader-4{-webkit-transform:scale(1.1) rotateZ(270deg);-ms-transform:scale(1.1) rotate(270deg);transform:scale(1.1) rotateZ(270deg)}#cube-loader .cube-loader .loader-2:before{-webkit-animation-delay:.35s;animation-delay:.35s}#cube-loader .cube-loader .loader-3:before{-webkit-animation-delay:.69s;animation-delay:.69s}#cube-loader .cube-loader .loader-4:before{-webkit-animation-delay:1.04s;animation-delay:1.04s}.done{opacity:0!important;visibility:hidden!important}@-webkit-keyframes cube-loader{0%,10%{-webkit-transform:perspective(136px) rotateX(-180deg);transform:perspective(136px) rotateX(-180deg);opacity:0}25%,75%{-webkit-transform:perspective(136px) rotateX(0);transform:perspective(136px) rotateX(0);opacity:1}100%,90%{-webkit-transform:perspective(136px) rotateY(180deg);transform:perspective(136px) rotateY(180deg);opacity:0}}@keyframes cube-loader{0%,10%{-webkit-transform:perspective(136px) rotateX(-180deg);transform:perspective(136px) rotateX(-180deg);opacity:0}25%,75%{-webkit-transform:perspective(136px) rotateX(0);transform:perspective(136px) rotateX(0);opacity:1}100%,90%{-webkit-transform:perspective(136px) rotateY(180deg);transform:perspective(136px) rotateY(180deg);opacity:0}}
         </style>
         <script>
         document.body.onload=function(){setTimeout(function(){var a=document.getElementById("cube-loader");a.classList.contains("done")||a.classList.add("done")},1450)};
@@ -66,16 +66,8 @@
                 <a class="btn cntcts" onclick="yaCounter49809103.reachGoal('contacts_btn'); return true;" href="">contacts</a>
             </div>
         </header>
-        <div id="home">
-            <div class="container_fluid">
-                <div class="content">
-                    <p class="hi">Hi!</p>
-                    <h1>I'm Ruslan</h1>
-                    <p>- a web developer.</p>
-                </div>
-            </div>
-        </div>
-        <div id="portfolio">
+        <div id="content">
+        <div id="portfolio" class="tab_name slideInLeft">
             <div class="container_fluid">
                 <div class="content">
                     <div class="blocks row">
@@ -212,6 +204,25 @@
                                 </div>
                             </div>
                         </div>
+                         <div class="block col-xl-3 col-lg-4 col-md-6 col-sm-6 col-12">
+                            <div class="content">
+                                <div class="photo">
+                                    <img src="img/topgun.jpg" alt="topgun">
+                                    <div class="overlay">
+                                        <div class="links">
+                                            <a target="_blank" href="https://ruslanmmr.github.io/portfolio/Barbershop/app/"><i class="fas fa-search"></i></a>
+                                            <a target="_blank" href="https://github.com/ruslanmmr/ruslanmmr.github.io/tree/master/portfolio/Barbershop/app"><i class="fas fa-external-link-alt"></i></a>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="title">
+                                    <div>
+                                        <h4>TopGun</h4>
+                                        <p>Сеть барбершопов в России</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <div class="footer">
@@ -224,7 +235,16 @@
                 </div>
             </div>
         </div>
-        <div id="contacts">
+        <div id="home" class="tab_name slideInUp">
+            <div class="container_fluid">
+                <div class="content">
+                    <p class="hi">Hi!</p>
+                    <h1>I'm Ruslan</h1>
+                    <p>- a web developer.</p>
+                </div>
+            </div>
+        </div>
+        <div id="contacts" class="tab_name slideInRight">
             <div class="container_fluid">
                 <div class="content">
                     <p>I’m currently working as a Freelance and Front-End Developer at
@@ -237,6 +257,7 @@
                 </div>
             </div>
         </div>
+        </div>
         <div id="footer">
             <p>© Belozertsev Ruslan 2016-2018 | All rights reserved.</p>
             <div class="madeby">
@@ -248,6 +269,7 @@
     </div>
     <!--styles-->
     <link rel="stylesheet" href="css/common.min.css">
+    <link rel="stylesheet" href="css/animate.css">
     <!--scripts-->
     <script async src="js/scripts.min.js"></script>
 </body>
