--- a/portfolio/Barbershop/app/index.html
+++ b/portfolio/Barbershop/app/index.html
@@ -70,11 +70,11 @@
         <div id="navigation">
             <nav>
                 <ul>
-                    <li class="link"><a class="cena" href="">цена успеха</a></li>
-                    <li class="link other inv"><a href="">topgun invest</a></li>
-                    <li class="link dop hidden_txt"><a href="">допматериалы</a></li>
-                    <li class="link lts other hidden_txt"><a href="">проекты</a></li>
-                    <li class="link lts other hidden_txt"><a href="">контакты</a></li>
+                    <li class="link1 link"><a class="cena" href="">цена успеха</a></li>
+                    <li class="link2 link other inv"><a href="">topgun invest</a></li>
+                    <li class="link3 link dop hidden_txt"><a href="">допматериалы</a></li>
+                    <li class="link4 link lts other hidden_txt"><a href="">проекты</a></li>
+                    <li class="link5 link lts other hidden_txt"><a href="">контакты</a></li>
                 </ul>
             </nav>
         </div>
