--- a/portfolio/Barbershop/app/index.html
+++ b/portfolio/Barbershop/app/index.html
@@ -169,12 +169,12 @@
                                 <div class="top_item">
                                     <p><span class="first">100</span> 000<span class="second"></span> = <span class="last">17</span>%</p>
                                     <p><span class="first">500</span> 000<span class="second"></span> = <span class="last">20</span>%</p>
-                                    <p><span class="first">2500</span > 000<span class="second"></span> = <span class="last">25</span>%</p>
-                                    <p><span class="first">5000</span> 000<span class="second"></span> = <span class="last">30</span>%</p>
+                                    <p><span class="first">2 500</span > 000<span class="second"></span> = <span class="last">25</span>%</p>
+                                    <p><span class="first">5 000</span> 000<span class="second"></span> = <span class="last">30</span>%</p>
                                 </div>
                                 <div class="bottom_item">
                                     <p>альтернативного
-                                        <br><span>гопредложения</span>
+                                        <br><span>предложения</span>
                                         <br><span>на</span> рынке
                                         <br> инвестирования
                                         <br>нет </p>
