--- a/portfolio/Barbershop/app/index.html
+++ b/portfolio/Barbershop/app/index.html
@@ -554,7 +554,7 @@
                     </div>
                 </div>
             </div>
-            <div id="contacts_tab" class="tab_page zoomIn">
+            <div id="contacts_tab" class="tab_page">
                 <div class="bg_portret"></div>
                 <div class="container">
                     <p class="top">уточнить детали</p>
