--- a/portfolio/Barbershop/app/index.html
+++ b/portfolio/Barbershop/app/index.html
@@ -179,7 +179,28 @@
                                 </div>
                             </div>
                             <div class="center_section">
-                                <div class="bg_monet"></div>
+                                <div class="bg_monet">
+                                    <div class="front1"></div>
+                                    <div class="front2"></div>
+                                    <div class="front3"></div>
+                                    <div class="front4"></div>
+                                    <div class="front5"></div>
+                                    <div class="front6"></div>
+                                    <div class="front7"></div>
+                                    <div class="front8"></div>
+                                    <div class="front9"></div>
+                                    <div class="front10"></div>
+                                    <div class="front11"></div>
+                                    <div class="front12"></div>
+                                    <div class="front13"></div>
+                                    <div class="front14"></div>
+                                    <div class="front15"></div>
+                                    <div class="front16"></div>
+                                    <div class="front17"></div>
+                                    <div class="front18"></div>
+                                    <div class="front19"></div>
+                                    <div class="front20"></div>
+                                </div>
                                 <div class="top_item">
                                     <p>инвестируй</p>
                                 </div>
